# ComfyUI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ruff.yml  stable-release.yml  test-build.yml  test-execution.yml  test-launch.yml  test-unit.yml  windows_release_dependencies.yml  windows_release_dependencies_manual.yml  windows_release_nightly_pytorch.yml
ComfyUI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/superpowers/specs/: 2026-04-01-dependency-taskrunner-design.md
tests/: README.md
tests-unit/: README.md
