[project]
name = "ComfyUI"
version = "0.18.1"
description = "The most powerful and modular visual AI engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "comfyui-frontend-package==1.42.8",
    "comfyui-workflow-templates==0.9.39",
    "comfyui-embedded-docs==0.4.3",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "filelock",
    "av>=14.2.0",
    "comfy-kitchen>=0.2.8",
    "comfy-aimdo>=0.2.12",
    "requests",
    "simpleeval>=1.0.0",
    "blake3",
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "PyOpenGL",
    "glfw",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[dependency-groups]
dev = [
    "ruff",
    "pylint",
    "taskipy",
]
test = [
    "pytest>=7.8.0",
    "pytest-aiohttp",
    "pytest-asyncio",
    "websocket-client",
    "opencv-python",
    "scikit-image",
]
manager = [
    "comfyui_manager==4.1",
]

[tool.setuptools]
packages = [
    "comfy",
    "comfy.audio_encoders",
    "comfy.cldm",
    "comfy.comfy_types",
    "comfy.extra_samplers",
    "comfy.image_encoders",
    "comfy.k_diffusion",
    "comfy.ldm",
    "comfy.sd1_tokenizer",
    "comfy.t2i_adapter",
    "comfy.taesd",
    "comfy.text_encoders",
    "comfy.weight_adapter",
    "comfy_api",
    "comfy_api.input",
    "comfy_api.input_impl",
    "comfy_api.internal",
    "comfy_api.latest",
    "comfy_api.torch_helpers",
    "comfy_api.util",
    "comfy_api.v0_0_1",
    "comfy_api.v0_0_2",
    "comfy_api_nodes",
    "comfy_config",
    "comfy_execution",
    "comfy_extras",
    "comfy_extras.chainner_models",
    "app",
    "api_server",
    "alembic_db",
    "blueprints",
    "middleware",
    "script_examples",
    "utils",
]

[tool.taskipy.tasks]
dev = { cmd = "python main.py", help = "Start ComfyUI server" }
dev-cpu = { cmd = "python main.py --cpu", help = "Start ComfyUI server (CPU only)" }
lint = { cmd = "ruff check .", help = "Run ruff linter" }
format = { cmd = "ruff format .", help = "Format code with ruff" }
format-check = { cmd = "ruff format --check .", help = "Check code formatting" }
pylint = { cmd = "pylint comfy_api_nodes", help = "Run pylint on API nodes" }
unit = { cmd = "pytest tests-unit", help = "Run unit tests" }
integration = { cmd = "pytest tests/execution -v --skip-timing-checks", help = "Run integration tests" }
inference = { cmd = "pytest tests/inference", help = "Run inference tests" }
quality = { cmd = "pytest tests/inference tests/execution -v --skip-timing-checks", help = "Quality regression tests" }
test = { cmd = "pytest tests-unit tests/execution -v --skip-timing-checks", help = "Run unit + integration tests" }
all = { cmd = "ruff check . && ruff format --check . && pylint comfy_api_nodes && pytest tests-unit tests/execution -v --skip-timing-checks", help = "Run all checks" }

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
